# code-challenges

./: .gitignore  README.md
AdventOfCode/2021/advent/: .gitignore  build.sbt
AdventOfCode/2021/advent/src/main/scala/: Challenge.scala
AdventOfCode/2021/advent/src/main/scala/inputs/: one.scala  three.scala  two.scala
AdventOfCode/2021/advent/src/test/scala/: OneSpec.scala
AdventOfCode/2022/: data.py  day_1.py  day_10.py  day_11.py  day_11_ai.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  input_9_3_test.txt
AdventOfCode/2022/threesum/src/: main.rs
AdventOfCode/2023/: day_1.py  day_1_test.py  day_2.py  day_2_test.py  pyproject.toml
AdventOfCode/2023/day_10/: day_10.py  input_test_3.txt
AdventOfCode/2023/day_11/: day_11.py
AdventOfCode/2023/day_12/: challenge.md  day_12.py  day_12_dynamic.py
AdventOfCode/2023/day_13/: day_13.py
AdventOfCode/2023/day_14/: day_14.py  main.md
AdventOfCode/2023/day_15/: day_15.py
AdventOfCode/2023/day_16/: day_16.py
AdventOfCode/2023/day_17/: day_17.py
AdventOfCode/2023/day_3/: day_3.py  day_3_test.py
AdventOfCode/2023/day_4/: day_4.py
AdventOfCode/2023/day_5/: day_5.py
AdventOfCode/2023/day_6/: day_6.py
AdventOfCode/2023/day_7/: day_7.py  day_7_test.py
AdventOfCode/2023/day_8/: main.py
AdventOfCode/2023/day_9/: day_9.py
AdventOfCode/2024/: pyproject.toml
AdventOfCode/2024/day_1/: day_1.py  day_1_2.py
AdventOfCode/2024/day_2/: day_2_1.py  day_2_2.py
AdventOfCode/2024/day_3/: main.py
AdventOfCode/2024/day_4/: main.py
AdventOfCode/2024/day_5/: day_5.py
AdventOfCode/2024/tests/: test_day_5.py
GSheets/: multiple_Selection.ipynb  pyproject.toml  teste.xlsx
Glue/: data_transformations.ipynb  generate_parquet.py  glue_script_duckdb.py  pyproject.toml  setup_interactive_session.ipynb
Glue/.ipynb_checkpoints/: setup_interactive_session-checkpoint.ipynb
Sandbox/Flink/: input.csv  main.py  pyproject.toml
Sandbox/Python/: ibis.ipynb  main.ipynb  pandas.ipynb  pyproject.toml
Sandbox/Rust/: rust.md
Sandbox/Rust/adder/src/: lib.rs
Sandbox/Rust/exceptions/: hello.txt
Sandbox/Rust/exceptions/src/: main.rs
Sandbox/Rust/guessing_game/src/: guess.rs  main.rs
Sandbox/Rust/guessing_game/tests/: integration_tests.rs
Sandbox/Rust/hello_cargo/src/: main.rs
Sandbox/Rust/minigrep/src/: lib.rs  main.rs
Sandbox/Rust/rectangles/src/: main.rs
Sandbox/Rust/reverse/: Cargo.toml
Sandbox/Rust/reverse/src/: main.rs
bedrock/: converse_stream.py  pyproject.toml
challenges/20230901_lengthOfLongestSubstring/python/: lengthOfLongestSubstring.py  lengthOfLongestSubstring_test.py
challenges/20230901_lengthOfLongestSubstring/typescript/: main.ts
challenges/20230904-valid-parentheses/python/: main.py  main_test.py
challenges/20230904-valid-parentheses/typescript/: main.ts
challenges/20230911-stack/python/: main.py  stack_test.py
challenges/20230911-stack/typescript/: main.ts
challenges/python/: remove_dups.py  rotate_array.py  sum-root-to-leaf-numbers.py
challenges/python/lengthOfLongestSubstring/: lengthOfLongestSubstring.py  lengthOfLongestSubstring_test.py
deno/: deno.ipynb
emr/: iris_data.py
excel-summarizer/: main.py  pyproject.toml
ollama/: main.py  netherdeep.md  pyproject.toml
openai/: assistant.py  dall-e.py  pyproject.toml
pyiceberg/: main.py  pyproject.toml
pyspark/: pyproject.toml
pyspark/notebooks/: tutorial.ipynb
todoist-printer/: .env.example  .gitignore  README.md  main.py  pyproject.toml
todoist-printer/.github/: copilot-instructions.md
