[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock"
dynamic = ["version"]
description = 'Test bedrock streaming API'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "José Cabeda", email = "jecabeda@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"boto3"
]

[project.urls]
Documentation = "https://github.com/José Cabeda/bedrock#readme"
Issues = "https://github.com/José Cabeda/bedrock/issues"
Source = "https://github.com/José Cabeda/bedrock"

[tool.hatch.version]
path = "src/bedrock/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bedrock tests}"

[tool.coverage.run]
source_pkgs = ["bedrock", "tests"]
branch = true
parallel = true
omit = [
  "src/bedrock/__about__.py",
]

[tool.coverage.paths]
bedrock = ["src/bedrock", "*/bedrock/src/bedrock"]
tests = ["tests", "*/bedrock/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
