[tool.poetry]
name = "pyiceberg-tests"
version = "0.1.0"
description = ""
authors = ["José Cabeda <jecabeda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyiceberg = {extras = ["glue", "hive", "s3fs"], version = "^0.6.0"}
pyarrow = "^15.0.2"
duckdb = "^0.10.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
