[tool.poetry]
name = "pyspark-tutorials"
version = "0.1.0"
description = ""
authors = ["José Cabeda <jecabeda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pyspark = {extras = ["connect", "pandas-on-spark", "sql"], version = "^3.5.2"}
plotly = "^5.23.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
